samples/_failures_safe/1761716372_5dc4f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2d2d0cd.c: In function ‘main’:
./samples/SAFE/__tmp_d2d2d0cd.c:166:9: error: expected expression at end of input
  166 |         if (input_result != 1)
      |         ^~
./samples/SAFE/__tmp_d2d2d0cd.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2d2d0cd.c:166:9: error: expected declaration or statement at end of input
